--- a/eclipse workspace/DWPProject/WebContent/css/sidebar.css
+++ b/eclipse workspace/DWPProject/WebContent/css/sidebar.css
@@ -1,18 +1,5 @@
 /*****SIDEBAR ELEMENTS*****/
 
-.sidebar_container {
-	border-right: 2px solid #5b6d7e;
-	min-height: 100%;
-	height: 100%;
-	max-height: 100%;
-	padding-top: 5px;
-	background-color: #344951;
-	color: #ecf0f1;
-	padding-right: 0px;
-	padding-left: 3px;
-	overflow: hidden;
-}
-
 .searchbar {
 	margin-left: 2px;
 	margin-right: 3px;
@@ -75,6 +62,18 @@
 }
 
 /* SIDEBAR EXTRA*/
+.sidebar_container {
+	border-right: 2px solid #5b6d7e;
+	min-height: 100%;
+	height: 100vh;
+	padding-top: 5px;
+	background-color: #344951;
+	color: #ecf0f1;
+	padding-right: 0px;
+	padding-left: 3px;
+	overflow: hidden;
+}
+
 .sidebar_icon {
 	margin-left: 3px;
 	margin-right: 4px;
